# philosophy-club

./: .gitignore  README.md  run-local.bat  run-local.sh
.github/workflows/: deploy.yml
be/: Cargo.toml  app.py  requirements.txt  template.yaml
be/src/: main.rs
docs/: CNAME  admin.html  admin.js  app.js  index.html  style.css  terms.html
fe/: app.js  index.html  script.js  styles.css
infra/: api_gateway.tf  lambda.tf  main.tf  outputs.tf  variables.tf
