[package]
name = "philosophy-club-be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
actix-identity = "0.4"
actix-cors = "0.6"
mongodb = "2.0"
oauth2 = "4.0"
bson = "1.2"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"

